Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
         </div>
         
         <div class="copyright">
-            &copy; 2026 Nexus Platform. All rights reserved.
+            &copy; 2026 SMGTechSolutions. All rights reserved.
         </div>
     </div>
 
@@ -516,4 +516,5 @@
         });
     </script>
 </body>
+
 </html>
